# noOS-Soccer-Project

./: .gitignore  README.md
3D Models/: Battery_holder_v3.gx  Platinenschutz_rechts_v2.gx
3D Models/blenderFiles/: cameraRaspberryexportCover.blend  cameraRaspberryexportMain.blend
3D Models/gxFiles/: Platinenschutz_links_v5.gx
3D Models/stlFiles/: Battery_holder_v3.stl  cameraRaspberryexportCover.stl  cameraRaspberryexportMain.stl
Controller Board PCB/Soccer_2v2_v1/: Encoder 1.bak  Encoder 2.sch  Encoder 3.sch  Linesensor 1.bak  Linesensor 10.bak  Linesensor 11.sch  Linesensor 12.bak  Linesensor 2.sch  Linesensor 3.bak  Linesensor 4.bak  Linesensor 5.bak  Linesensor 6.bak  Linesensor 7.sch  Linesensor 8.bak  Linesensor 9.sch  Motor Controller.sch  Power.sch  Raspbery Pi.sch  Sensor Controller.bak  Sensor Controller.sch  Soccer_2v2_v1  UI+Top.bak  (+13 more)
Documentation/: Motor Controller - Raspberry Pi SPI communication protocol.txt  Raspberry PI Setup.txt
Raspberry Pi Software/: CMakeCache.txt  CMakeLists.txt  Important Soccer Setup Notes.txt  Makefile  area.cpp  area.hpp  ball.cpp  ball.h  calibrate.cpp  calibrate.txt  calibrateBall.txt  calibrateGoal.txt  calibrateGoal_blue.txt  calibrateGoal_yellow.txt  camera.cpp  camera.h  com.cpp  com.h  goal.cpp  goal.h  main.cpp  packets.h  pinstate.py  pythreads.cpp  start.sh
Raspberry Pi Software/soccer/: CMakeLists.txt  Makefile  [11.02.2018_14.41]main.c  [24.02.2018_12.37]main.cpp  area.cpp  calibrate  calibrate.cpp  calibrate.txt  cmake_install.cmake  main.cpp  packets.h  soccer  start.sh
Wallpaper/: noOS wallpaper.xcf
(+119 files in other folders)
